--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,9 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Run tests
-        run: pytest
+        run: |
+          export PYTHONPATH=$(pwd)
+          pytest
 
       - name: Log in to GHCR
         uses: docker/login-action@v3
